# kozeig

./: .gitignore  BENCHMARKS.md  CHANGELOG.md  Cargo.toml  LICENSE  PLAN.md  README.md  SCRATCHPAD.md  SYNTAX.md  arithmetic  arithmetic.ll  arrays  arrays.ll  basic_math  basic_math.ll  benchmark  benchmark.ll  benchmark.py  benchmark.sh  benchmark_results.csv  benchmark_summary.csv  boolean  build.sh  compiler_fixes.patch  compiler_recursion_fix.patch  debug_parse.lut  fp_test  fp_test.ll  function_showcase.ll  goal.lut  hello  hello.ll  manual_tailcall  manual_tailcall.ll  print_test.lut  showcase  showcase.ll  simple_recursive  simple_recursive.ll  unified_syntax  (+1 more)
examples/: advanced_one_liner.lut  arithmetic.lut  arrays.lut  ascii.lut  basic_math.lut  benchmark.ko  benchmark.lut  boolean.lut  count.lut  factorial.lut  fp_test.lut  function_showcase.lut  hello.ko  hello.lut  if_alt.lut  if_else.lut  if_part1.lut  if_simple.lut  if_test.lut  loops.lut  new_syntax.lut  numbers.lut  one_liner.lut  showcase.lut  showcase_updated.lut  simple_if.lut  simple_if_cmd.lut  unified_syntax.lut
examples/tempconverter/: formatting_lib.ko  interactive.ko  main.ko  temp_lib.ko  utils.ko  water_states.ko
src/: benchmark.rs  compiler.rs  dependency_manager.rs  error_reporting.rs  interpreter.rs  lexer.rs  main.rs  parser.rs
