[package]
name = "lut"
version = "0.5.0"
edition = "2021"
authors = ["Jason Weiss <jason.awz2005@icloud.com>"]
description = "A fun programming language called 'lut'"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
bincode = "1.3"
tempfile = "3.2"
cc = "1.0"
inkwell = { git = "https://github.com/TheDan64/inkwell", branch = "master", features = ["llvm16-0"] }
