[package]
name = "kozeig"
version = "0.5.0"
edition = "2021"
authors = ["Jason Weiss <jason.awz2005@icloud.com>"]
description = "Just a quirky little language with a lot of bold opinions"

[[bin]]
name = "koze"
path = "src/main.rs"

[[bin]]
name = "benchmark"
path = "src/benchmark.rs"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
bincode = "1.3"
tempfile = "3.2"
cc = "1.0"
inkwell = { git = "https://github.com/TheDan64/inkwell", branch = "master", features = ["llvm16-0"] }
csv = "1.3"
plotters = "0.3"
